# randy-model

./: CHANGELOG.md  Cargo.toml  README.md
benches/: deserialization.rs  image_hash.rs
src/channel/message/component/: kind.rs  mod.rs
src/channel/thread/: auto_archive_duration.rs
src/gateway/: frame.rs  id.rs
src/gateway/event/: mod.rs
src/gateway/payload/outgoing/: request_guild_members.rs
src/gateway/presence/: activity_button.rs
src/guild/: afk_timeout.rs  integration.rs  integration_type.rs  role.rs
src/guild/audit_log/: change.rs  change_key.rs  event_type.rs
src/http/: attachment.rs
src/id/: mod.rs
src/oauth/: application.rs  current_authorization_information.rs  scope.rs
src/user/: connection.rs  current_user.rs  mod.rs
src/util/: image_hash.rs
src/util/datetime/: display.rs  mod.rs
