[workspace]
resolver = "2"

[package]
authors = ["swrge"]
edition = "2021"
include = ["/src"]
license = "MIT"
rust-version = "1.84.0"
description = "Discord API models for the Twilight ecosystem."
homepage = "https://twilight.rs/chapter_1_crates/section_1_model.html"
keywords = ["discord", "discord-api", "twilight"]
name = "randy-model"
repository = "https://github.com/swrge/randy-model"
version = "0.1.0"

[dependencies]
bitflags = { default-features = false, version = "2" }
serde = { default-features = false, features = ["derive", "std"], version = "1.0.103" }
serde-value = { default-features = false, version = "0.7" }
serde_repr = { default-features = false, version = "0.1.5" }
time = { default-features = false, features = ["parsing", "std"], version = "0.3" }

[dev-dependencies]
criterion = { default-features = false, version = "0.5" }
serde_json = { default-features = false, features = ["std"], version = "1" }
serde_test = { default-features = false, version = "1" }
static_assertions = { default-features = false, version = "1.0" }

[[bench]]
name = "deserialization"
harness = false
path = "benches/deserialization.rs"

[[bench]]
name = "image_hash"
harness = false
path = "benches/image_hash.rs"
